[package]
name = "cryptograph"
version = "0.1.10"
edition = "2024"
description = "All you need for encrypthing your messages."
license = "MIT"
documentation = "https://docs.rs/cryptograph"

[dependencies]
num-traits = "0.2.19"
rand = "0.10.0"
rand_core = "0.10.0"
futures = "0.3.32"

[dev-dependencies]
tokio-test = "0.4.5"
